--- a/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteTotal.rdlc
+++ b/branches/Sindicato/Sindicato.WebSite/Reportes/ReporteTotal.rdlc
@@ -744,7 +744,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.6cm</Height>
+              <Height>0.89104cm</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -943,6 +943,7 @@
                         <RightBorder>
                           <Color>Black</Color>
                         </RightBorder>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -991,6 +992,7 @@
                         <RightBorder>
                           <Color>Black</Color>
                         </RightBorder>
+                        <VerticalAlign>Middle</VerticalAlign>
                         <PaddingLeft>2pt</PaddingLeft>
                         <PaddingRight>2pt</PaddingRight>
                         <PaddingTop>2pt</PaddingTop>
@@ -1531,7 +1533,7 @@
           <TablixMembers>
             <TablixMember>
               <TablixHeader>
-                <Size>4.16688cm</Size>
+                <Size>5.04001cm</Size>
                 <CellContents>
                   <Textbox Name="Textbox24">
                     <CanGrow>true</CanGrow>
@@ -1595,7 +1597,7 @@
                 </SortExpression>
               </SortExpressions>
               <TablixHeader>
-                <Size>4.16688cm</Size>
+                <Size>5.04001cm</Size>
                 <CellContents>
                   <Textbox Name="DETALLE1">
                     <CanGrow>true</CanGrow>
@@ -1651,7 +1653,7 @@
             </TablixMember>
             <TablixMember>
               <TablixHeader>
-                <Size>4.16688cm</Size>
+                <Size>5.04001cm</Size>
                 <CellContents>
                   <Textbox Name="Textbox66">
                     <CanGrow>true</CanGrow>
@@ -1660,7 +1662,7 @@
                       <Paragraph>
                         <TextRuns>
                           <TextRun>
-                            <Value>INGRESOS TOTALES</Value>
+                            <Value>INGRESOS TOTALES(Venta Hojas + Regularizaciones  + Ingresos)</Value>
                             <Style>
                               <FontStyle>Normal</FontStyle>
                               <FontFamily>Calibri</FontFamily>
@@ -1700,7 +1702,7 @@
             </TablixMember>
             <TablixMember>
               <TablixHeader>
-                <Size>4.16688cm</Size>
+                <Size>5.04001cm</Size>
                 <CellContents>
                   <Textbox Name="Textbox6">
                     <CanGrow>true</CanGrow>
@@ -1749,7 +1751,7 @@
             </TablixMember>
             <TablixMember>
               <TablixHeader>
-                <Size>4.16688cm</Size>
+                <Size>5.04001cm</Size>
                 <CellContents>
                   <Textbox Name="Textbox16">
                     <CanGrow>true</CanGrow>
@@ -1801,8 +1803,8 @@
         <DataSetName>DataSet1</DataSetName>
         <Top>1.08162cm</Top>
         <Left>0.84349cm</Left>
-        <Height>3.6cm</Height>
-        <Width>18.69063cm</Width>
+        <Height>3.89104cm</Height>
+        <Width>19.56376cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1948,8 +1950,8 @@
         </Style>
       </Textbox>
       <Line Name="Line1">
-        <Top>5.97641cm</Top>
-        <Left>0.84349cm</Left>
+        <Top>10.77127cm</Top>
+        <Left>0.94932cm</Left>
         <Height>0cm</Height>
         <Width>7.31354cm</Width>
         <ZIndex>5</ZIndex>
@@ -1960,8 +1962,8 @@
         </Style>
       </Line>
       <Line Name="Line2">
-        <Top>5.97641cm</Top>
-        <Left>11.5062cm</Left>
+        <Top>10.77127cm</Top>
+        <Left>11.61203cm</Left>
         <Height>0cm</Height>
         <Width>8.02792cm</Width>
         <ZIndex>6</ZIndex>
@@ -1992,8 +1994,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox3</rd:DefaultName>
-        <Top>6.11752cm</Top>
-        <Left>2.27224cm</Left>
+        <Top>10.91238cm</Top>
+        <Left>2.37807cm</Left>
         <Height>0.6cm</Height>
         <Width>4.0875cm</Width>
         <ZIndex>7</ZIndex>
@@ -2028,8 +2030,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox3</rd:DefaultName>
-        <Top>6.1528cm</Top>
-        <Left>13.32177cm</Left>
+        <Top>10.94766cm</Top>
+        <Left>13.4276cm</Left>
         <Height>0.6cm</Height>
         <Width>4.58548cm</Width>
         <ZIndex>8</ZIndex>
@@ -2063,8 +2065,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox3</rd:DefaultName>
-        <Top>6.7528cm</Top>
-        <Left>2.27224cm</Left>
+        <Top>11.54766cm</Top>
+        <Left>2.37807cm</Left>
         <Height>0.6cm</Height>
         <Width>4.0875cm</Width>
         <ZIndex>9</ZIndex>
@@ -2098,8 +2100,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox3</rd:DefaultName>
-        <Top>6.7528cm</Top>
-        <Left>13.32177cm</Left>
+        <Top>11.54766cm</Top>
+        <Left>13.4276cm</Left>
         <Height>0.6cm</Height>
         <Width>4.58548cm</Width>
         <ZIndex>10</ZIndex>
@@ -2113,11 +2115,53 @@
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
+      <Subreport Name="ReporteResumenHojas">
+        <ReportName>ReporteResumenHojas</ReportName>
+        <Parameters>
+          <Parameter Name="FECHA_INI">
+            <Value>=First(Fields!FECHA_INI.Value, "DataSet1")</Value>
+          </Parameter>
+          <Parameter Name="FECHA_FIN">
+            <Value>=First(Fields!FECHA_FIN.Value, "DataSet1")</Value>
+          </Parameter>
+        </Parameters>
+        <Top>5.14905cm</Top>
+        <Left>0.84349cm</Left>
+        <Height>2.01083cm</Height>
+        <Width>19.56376cm</Width>
+        <ZIndex>11</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+        </Style>
+      </Subreport>
+      <Subreport Name="ReporteResumenNumeracion">
+        <ReportName>ReporteResumenNumeracion</ReportName>
+        <Parameters>
+          <Parameter Name="FECHA_INI">
+            <Value>=First(Fields!FECHA_INI.Value, "DataSet1")</Value>
+          </Parameter>
+          <Parameter Name="FECHA_FIN">
+            <Value>=First(Fields!FECHA_FIN.Value, "DataSet1")</Value>
+          </Parameter>
+        </Parameters>
+        <Top>7.33627cm</Top>
+        <Left>0.84349cm</Left>
+        <Height>1.62042cm</Height>
+        <Width>19.56376cm</Width>
+        <ZIndex>12</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+        </Style>
+      </Subreport>
     </ReportItems>
-    <Height>3.28125in</Height>
+    <Height>4.78254in</Height>
     <Style />
   </Body>
-  <Width>8.92025in</Width>
+  <Width>8.22233in</Width>
   <Page>
     <PageHeader>
       <Height>1.24354cm</Height>
@@ -2164,8 +2208,8 @@
         </Border>
       </Style>
     </PageHeader>
-    <PageHeight>29.7cm</PageHeight>
-    <PageWidth>21cm</PageWidth>
+    <PageHeight>27.94cm</PageHeight>
+    <PageWidth>21.59cm</PageWidth>
     <LeftMargin>0cm</LeftMargin>
     <RightMargin>0cm</RightMargin>
     <TopMargin>0cm</TopMargin>
