--- a/branches/Sindicato/Sindicato.WebSite/Views/Shared/_LogOnLayout.cshtml
+++ b/branches/Sindicato/Sindicato.WebSite/Views/Shared/_LogOnLayout.cshtml
@@ -4,8 +4,9 @@
 <head>
     <title>_LogOnLayout</title>
 
-    <link href="@Url.Content("~/Scripts/Extjs/resources/css/ext-all.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/Extjs/ext-all.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/extjs/shared/include-ext.js?theme=gray")" type="text/javascript"></script>
+    @*<link href="@Url.Content("~/Scripts/Extjs/resources/css/ext-all.css")" rel="stylesheet" type="text/css" />*@
+@*    <script src="@Url.Content("~/Scripts/Extjs/ext-all.js")" type="text/javascript"></script>*@
     <script src="@Url.Content("~/App/View/LogOn/LogOn.js")" type="text/javascript"></script>
 
 </head>
