--- a/branches/Sindicato/Sindicato.WebSite/Views/Shared/_LayoutExtjs.cshtml
+++ b/branches/Sindicato/Sindicato.WebSite/Views/Shared/_LayoutExtjs.cshtml
@@ -7,11 +7,13 @@
     </title>
     <link href="~/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link href="@Url.Content("~/Scripts/Extjs/resources/css/ext-all.css")" rel="stylesheet" type="text/css" />
+    
     <link href="@Url.Content("~/Content/Icons.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/print.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/extjs42.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Blext.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/extjs/shared/include-ext.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/extjs/shared/include-ext.js?theme=gray")" type="text/javascript"></script>
+    <script src="@Url.Content("~/lib/deft/deft-debug.js")" type="text/javascript"></script>
 
     <script src="@Url.Content("~/lib/pdf.js/compatibility.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/lib/pdf.js/pdf.js")" type="text/javascript"></script>
